# alcohol-pedagogics

./: .gitignore  Home.py  Pipfile  README.md  packages.txt  pyproject.toml  readme.md  utils.py
models/: alcohol_model.txt  alcohol_model_28.txt  alcohol_model_28_old.txt
pages/: 1_Effects_of_body_size.py  1_Timings of alcohol consumption (part 1).py  1_Timings of alcohol consumption.py  2_Effects_of_body_size.py  2_Personal differences.py  2_Timings of alcohol consumption (part 2).py  3_Effects_of_meal_consumption.py  3_Personal differences.py  4_Effects_of_meal_consumption.py  X_backup.py
