[project]
name = "alcohol-pedagogics"
version = "0.1.0"
description = "Visualize the effects of alcohol, using the SUND Toolbox"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plotly>=6.0.1",
    "streamlit>=1.45.0",
    "sund",
]

[tool.uv.sources]
sund = { url = "https://isbgroup.eu/sund-toolbox/releases/sund-1.8.2.tar.gz" }
